--- a/src/main/resources/locale_en_GB.properties
+++ b/src/main/resources/locale_en_GB.properties
@@ -1,24 +1,22 @@
-admin.debtors=Debtors
-admin.logout=Logout
-admin.profile=Profile
-admin.registration=Registration
 footer.copyright=&copy; V.V. Myroniuk, 2017
-header.language=Language
+header.logout=Logout
+header.phone.station=Phone Station
 login.authentication=Authentication
 login.enter=Enter
 login.login=Login
 login.password=Password
 login.registration=Registration
 menu.account.refill=Account refill
-menu.logout=Logout
-menu.make.call=Make call
+menu.all.users=Users
+menu.debtors=Debtors
+menu.new.users=New users
 menu.profile=Profile
 menu.services=Services
-registration.login=Login
-registration.name=Name
-registration.passport=Passport
-registration.password=Password
 registration=Registration
+registration.login=Login
+registration.middle_name=Middle name
+registration.name=Name
+registration.password=Password
+registration.phone_number=Phone number
 registration.send=Send
-registration.sim.card.number=Sim card number
 registration.surname=Surname
