--- a/src/main/resources/locale_uk_UA.properties
+++ b/src/main/resources/locale_uk_UA.properties
@@ -1,25 +1,25 @@
-admin.debtors=\u0411\u043E\u0440\u0436\u043D\u0438\u043A\u0438
-admin.profile=\u041F\u0440\u043E\u0444\u0456\u043B\u044C
-admin.logout=\u0412\u0438\u0439\u0442\u0438
-admin.registration=\u0420\u0435\u0454\u0441\u0442\u0440\u0430\u0446\u0456\u044F
 footer.copyright=&copy; \u0412.\u0412. \u041C\u0438\u0440\u043E\u043D\u044E\u043A, 2017
-header.language=\u041C\u043E\u0432\u0430
-login.login=\u041B\u043E\u0433\u0456\u043D
-login.password=\u041F\u0430\u0440\u043E\u043B\u044C
-menu.profile=\u041F\u0440\u043E\u0444\u0456\u043B\u044C
-menu.services=\u041F\u043E\u0441\u043B\u0443\u0433\u0438
-menu.account.refill=\u041F\u043E\u043F\u043E\u0432\u043D\u0438\u0442\u0438 \u0440\u0430\u0445\u0443\u043D\u043E\u043A
-menu.make.call=\u0417\u0430\u0442\u0435\u043B\u0435\u0444\u043E\u043D\u0443\u0432\u0430\u0442\u0438
-menu.logout=\u0412\u0438\u0439\u0442\u0438
-registration=\u0420\u0435\u0454\u0441\u0442\u0440\u0430\u0446\u0456\u044F
-registration.sim.card.number=\u041D\u043E\u043C\u0435\u0440 \u0441\u0456\u043C \u043A\u0430\u0440\u0442\u043A\u0438
-registration.name=\u0406\u043C'\u044F
-registration.surname=\u041F\u0440\u0456\u0437\u0432\u0438\u0449\u0435
-registration.passport=\u041F\u0430\u0441\u043F\u043E\u0440\u0442
-registration.login=\u041B\u043E\u0433\u0456\u043D
-registration.password=\u041F\u0430\u0440\u043E\u043B\u044C
-registration.send=\u0412\u0456\u0434\u043F\u0440\u0430\u0432\u0438\u0442\u0438
+header.logout=\u0412\u0438\u0439\u0442\u0438
+header.phone.station=\u0422\u0435\u043B\u0435\u0444\u043E\u043D\u043D\u0430 \u0441\u0442\u0430\u043D\u0446\u0456\u044F
 login.authentication=\u0410\u0432\u0442\u0435\u043D\u0442\u0438\u0444\u0456\u043A\u0430\u0446\u0456\u044F
 login.enter=\u0423\u0432\u0456\u0439\u0442\u0438
+login.login=\u041B\u043E\u0433\u0456\u043D
+login.password=\u041F\u0430\u0440\u043E\u043B\u044C
 login.registration=\u0420\u0435\u0454\u0441\u0442\u0440\u0430\u0446\u0456\u044F
+menu.account.refill=\u041F\u043E\u043F\u043E\u0432\u043D\u0438\u0442\u0438 \u0440\u0430\u0445\u0443\u043D\u043E\u043A
+menu.all.users=\u041A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0456
+menu.debtors=\u0411\u043E\u0440\u0436\u043D\u0438\u043A\u0438
+menu.new.users=\u041D\u043E\u0432\u0456 \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0456
+menu.profile=\u041F\u0440\u043E\u0444\u0456\u043B\u044C
+menu.services=\u041F\u043E\u0441\u043B\u0443\u0433\u0438
+registration=\u0420\u0435\u0454\u0441\u0442\u0440\u0430\u0446\u0456\u044F
+registration.login=\u041B\u043E\u0433\u0456\u043D
+registration.middle_name=\u041F\u043E \u0431\u0430\u0442\u044C\u043A\u043E\u0432\u0456
+registration.name=\u0406\u043C'\u044F
+registration.password=\u041F\u0430\u0440\u043E\u043B\u044C
+registration.phone_number=\u041D\u043E\u043C\u0435\u0440 \u0442\u0435\u043B\u0435\u0444\u043E\u043D\u0430
+registration.send=\u0412\u0456\u0434\u043F\u0440\u0430\u0432\u0438\u0442\u0438
+registration.surname=\u041F\u0440\u0456\u0437\u0432\u0438\u0449\u0435
+
+
 
