Refactoring the project structure.

--- a/src/main/resources/locale_en_GB.properties
+++ b/src/main/resources/locale_en_GB.properties
@@ -9,6 +9,7 @@ login.registration=Registration
 menu.account.refill=Account refill
 menu.all.users=Users
 menu.debtors=Debtors
+menu.invoices=Invoices
 menu.new.users=New users
 menu.profile=Profile
 menu.services=Services
