Methods hashCode() and equals() are added.

--- a/src/main/resources/locale_en_GB.properties
+++ b/src/main/resources/locale_en_GB.properties
@@ -1,3 +1,7 @@
+account.refill.confirm=Confirm
+account.refill.credit.card=Credit card
+account.refill.cvv=CVV
+account.refill.sum=Sum
 footer.copyright=&copy; V.V. Myroniuk, 2017
 header.logout=Logout
 header.phone.station=Phone Station
