CommandSecurityFilter and MyHttpServletRequestWrapper are added.

--- a/src/main/resources/locale_uk_UA.properties
+++ b/src/main/resources/locale_uk_UA.properties
@@ -4,7 +4,7 @@ account.refill.cvv=CVV
 account.refill.sum=\u0421\u0443\u043C\u0430
 footer.copyright=&copy; \u0412.\u0412. \u041C\u0438\u0440\u043E\u043D\u044E\u043A, 2017
 header.logout=\u0412\u0438\u0439\u0442\u0438
-header.phone.station=\u0422\u0435\u043B\u0435\u0444\u043E\u043D\u043D\u0430 \u0441\u0442\u0430\u043D\u0446\u0456\u044F
+header.phone.station=\u0422\u0415\u041B\u0415\u0424\u041E\u041D\u041D\u0410 \u0421\u0422\u0410\u041D\u0426\u0406\u042F
 login.authentication=\u0410\u0432\u0442\u0435\u043D\u0442\u0438\u0444\u0456\u043A\u0430\u0446\u0456\u044F
 login.enter=\u0423\u0432\u0456\u0439\u0442\u0438
 login.login=\u041B\u043E\u0433\u0456\u043D
@@ -18,6 +18,7 @@ menu.new.users=\u041D\u043E\u0432\u0456 \u043A\u043E\u0440\u0438\u0441\u0442\u04
 menu.profile=\u041F\u0440\u043E\u0444\u0456\u043B\u044C
 menu.services=\u041F\u043E\u0441\u043B\u0443\u0433\u0438
 registration=\u0420\u0435\u0454\u0441\u0442\u0440\u0430\u0446\u0456\u044F
+registration.confirm.password=\u041F\u0456\u0434\u0442\u0432\u0435\u0440\u0434\u0438\u0442\u0438 \u043F\u0430\u0440\u043E\u043B\u044C
 registration.login=\u041B\u043E\u0433\u0456\u043D
 registration.middle_name=\u041F\u043E \u0431\u0430\u0442\u044C\u043A\u043E\u0432\u0456
 registration.name=\u0406\u043C'\u044F
