--- a/src/main/resources/locale_en_GB.properties
+++ b/src/main/resources/locale_en_GB.properties
@@ -4,7 +4,7 @@ account.refill.cvv=CVV
 account.refill.sum=Sum
 footer.copyright=&copy; V.V. Myroniuk, 2017
 header.logout=Logout
-header.phone.station=Phone Station
+header.phone.station=PHONE STATION
 login.authentication=Authentication
 login.enter=Enter
 login.login=Login
@@ -18,6 +18,7 @@ menu.new.users=New users
 menu.profile=Profile
 menu.services=Services
 registration=Registration
+registration.confirm.password=Confirm password
 registration.login=Login
 registration.middle_name=Middle name
 registration.name=Name
