New commands are added.

--- a/src/main/resources/locale_en_GB.properties
+++ b/src/main/resources/locale_en_GB.properties
@@ -2,6 +2,33 @@ account.refill.confirm=Confirm
 account.refill.credit.card=Credit card
 account.refill.cvv=CVV
 account.refill.sum=Sum
+admin.all.users=All users
+admin.all.users.count=All users count:
+admin.debtors=Debtors
+admin.debtors.count=Debtors count:
+admin.hello=Hello
+admin.info=At the moment we have the following situation.
+admin.new.users=New users
+admin.new.users.count=New users count:
+admin.table.active=active
+admin.table.add=Add
+admin.table.add.user=add
+admin.table.balance=Balance
+admin.table.block=block
+admin.table.blocked=blocked
+admin.table.change.status=Change status
+admin.table.date=Date
+admin.table.description=Description
+admin.table.middle_name=Middle name
+admin.table.name=Name
+admin.table.phone.number=Phone number
+admin.table.price=Price
+admin.table.show=show
+admin.table.status=Status
+admin.table.surname=Surname
+admin.table.unblock=unblock
+admin.table.unpaid.invoices=Unpaid invoices
+admin.table.user=User
 footer.copyright=&copy; V.V. Myroniuk, 2017
 header.logout=Logout
 header.phone.station=PHONE STATION
@@ -20,9 +47,9 @@ menu.services=Services
 registration=Registration
 registration.confirm.password=Confirm password
 registration.login=Login
-registration.middle_name=Middle name
+registration.middle.name=Middle name
 registration.name=Name
 registration.password=Password
-registration.phone_number=Phone number
+registration.phone.number=Phone number
 registration.send=Send
 registration.surname=Surname
