Localization is added.

--- a/src/main/resources/locale_en_GB.properties
+++ b/src/main/resources/locale_en_GB.properties
@@ -1,15 +1,7 @@
-account.refill.confirm=Confirm
-account.refill.credit.card=Credit card
-account.refill.cvv=CVV
-account.refill.sum=Sum
-admin.all.users=All users
-admin.all.users.count=All users count:
 admin.debtors=Debtors
-admin.debtors.count=Debtors count:
 admin.hello=Hello
-admin.info=At the moment we have the following situation.
+admin.info=Current information.
 admin.new.users=New users
-admin.new.users.count=New users count:
 admin.table.active=active
 admin.table.add=Add
 admin.table.add.user=add
@@ -27,8 +19,10 @@ admin.table.show=show
 admin.table.status=Status
 admin.table.surname=Surname
 admin.table.unblock=unblock
-admin.table.unpaid.invoices=Unpaid invoices
+admin.table.invoices=Invoices
 admin.table.user=User
+admin.users=Users
+error=Error has occurred!
 footer.copyright=&copy; V.V. Myroniuk, 2017
 header.logout=Logout
 header.phone.station=PHONE STATION
@@ -38,13 +32,16 @@ login.login=Login
 login.password=Password
 login.registration=Registration
 menu.account.refill=Account refill
-menu.all.users=Users
+menu.users=Users
 menu.debtors=Debtors
 menu.invoices=Invoices
 menu.new.users=New users
 menu.profile=Profile
 menu.services=Services
 registration=Registration
+registration.congratulation=Congratulation!
+registration.congratulation.sentence1=You have successfully registered on this web site.
+registration.congratulation.sentence2=After your data are checked you will be able log in your account.
 registration.confirm.password=Confirm password
 registration.login=Login
 registration.middle.name=Middle name
@@ -53,3 +50,30 @@ registration.password=Password
 registration.phone.number=Phone number
 registration.send=Send
 registration.surname=Surname
+user.account.refill=Account refill
+user.account.refill.confirm=Confirm
+user.account.refill.credit.card=Credit card
+user.account.refill.cvv=CVV
+user.account.refill.sum=Sum
+user.invoices=Invoices
+user.profile=Your profile
+user.profile.balance=Balance
+user.profile.login=Login
+user.profile.middle.name=Middle name
+user.profile.name=Name
+user.profile.password=Password
+user.profile.phone.number=Phone number
+user.profile.surname=Surname
+user.services=Services
+user.table.active=active
+user.table.change.status=Change status
+user.table.date=Date
+user.table.description=Description
+user.table.inactive=inactive
+user.table.name=Name
+user.table.pay=Pay
+user.table.pay.invoice=pay
+user.table.price=Price
+user.table.status=Status
+user.table.switch.off=switch off
+user.table.switch.on=switch on
