--- a/src/main/resources/locale_uk_UA.properties
+++ b/src/main/resources/locale_uk_UA.properties
@@ -1,20 +1,12 @@
-account.refill.confirm=\u041F\u0456\u0434\u0442\u0432\u0435\u0440\u0434\u0438\u0442\u0438
-account.refill.credit.card=\u041A\u0440\u0435\u0434\u0438\u0442\u043D\u0430 \u043A\u0430\u0440\u0442\u043A\u0430
-account.refill.cvv=CVV
-account.refill.sum=\u0421\u0443\u043C\u0430
-admin.all.users=\u0423\u0441\u0456 \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0456
-admin.all.users.count=\u041A\u0456\u043B\u044C\u043A\u0456\u0441\u0442\u044C \u0443\u0441\u0456\u0445 \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0456\u0432:
 admin.debtors=\u0411\u043E\u0440\u0436\u043D\u0438\u043A\u0438
-admin.debtors.count=\u041A\u0456\u043B\u044C\u043A\u0456\u0441\u0442\u044C \u0431\u043E\u0440\u0436\u043D\u0438\u043A\u0456\u0432:
 admin.hello=\u041F\u0440\u0438\u0432\u0456\u0442
-admin.info=\u041D\u0430 \u0434\u0430\u043D\u0438\u0439 \u0447\u0430\u0441 \u043C\u0430\u0454\u043C\u043E \u043D\u0430\u0441\u0442\u0443\u043F\u043D\u0443 \u0441\u0438\u0442\u0443\u0430\u0446\u0456\u044E.
+admin.info=\u041F\u043E\u0442\u043E\u0447\u043D\u0430 \u0456\u043D\u0444\u043E\u0440\u043C\u0430\u0446\u0456\u044F.
 admin.new.users=\u041D\u043E\u0432\u0456 \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0456
-admin.new.users.count=\u041A\u0456\u043B\u044C\u043A\u0456\u0441\u0442\u044C \u043D\u043E\u0432\u0438\u0445 \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0456\u0432:
 admin.table.active=\u0430\u043A\u0442\u0438\u0432\u043D\u0438\u0439
 admin.table.add=\u0414\u043E\u0434\u0430\u0442\u0438
 admin.table.add.user=\u0434\u043E\u0434\u0430\u0442\u0438
 admin.table.balance=\u0411\u0430\u043B\u0430\u043D\u0441
-admin.table.block=\u0431\u043B\u043E\u043A\u0443\u0432\u0430\u0442\u0438
+admin.table.block=\u0437\u0430\u0431\u043B\u043E\u043A\u0443\u0432\u0430\u0442\u0438
 admin.table.blocked=\u0437\u0430\u0431\u043B\u043E\u043A\u043E\u0432\u0430\u043D\u0438\u0439
 admin.table.change.status=\u0417\u043C\u0456\u043D\u0438\u0442\u0438 \u0441\u0442\u0430\u0442\u0443\u0441
 admin.table.date=\u0414\u0430\u0442\u0430
@@ -22,13 +14,15 @@ admin.table.description=\u041E\u043F\u0438\u0441
 admin.table.middle_name=\u041F\u043E \u0431\u0430\u0442\u044C\u043A\u043E\u0432\u0456
 admin.table.name=\u0406\u043C'\u044F
 admin.table.phone.number=\u041D\u043E\u043C\u0435\u0440 \u0442\u0435\u043B\u0435\u0444\u043E\u043D\u0443
-admin.table.price=\u0426\u0456\u043D\u043D\u0430
+admin.table.price=\u0426\u0456\u043D\u0430
 admin.table.show=\u043F\u043E\u043A\u0430\u0437\u0430\u0442\u0438
 admin.table.status=\u0421\u0442\u0430\u0442\u0443\u0441
 admin.table.surname=\u041F\u0440\u0456\u0437\u0432\u0438\u0449\u0435
 admin.table.unblock=\u0440\u043E\u0437\u0431\u043B\u043E\u043A\u0443\u0432\u0430\u0442\u0438
-admin.table.unpaid.invoices=\u041D\u0435\u043E\u043F\u043B\u0430\u0447\u0435\u043D\u0456 \u0440\u0430\u0445\u0443\u043D\u043A\u0438
+admin.table.invoices=\u0420\u0430\u0445\u0443\u043D\u043A\u0438
 admin.table.user=\u041A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447
+admin.users=\u041A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0456
+error=\u0422\u0440\u0430\u043F\u0438\u043B\u0430\u0441\u044C \u043F\u043E\u043C\u0438\u043B\u043A\u0430!
 footer.copyright=&copy; \u0412.\u0412. \u041C\u0438\u0440\u043E\u043D\u044E\u043A, 2017
 header.logout=\u0412\u0438\u0439\u0442\u0438
 header.phone.station=\u0422\u0415\u041B\u0415\u0424\u041E\u041D\u041D\u0410 \u0421\u0422\u0410\u041D\u0426\u0406\u042F
@@ -38,13 +32,16 @@ login.login=\u041B\u043E\u0433\u0456\u043D
 login.password=\u041F\u0430\u0440\u043E\u043B\u044C
 login.registration=\u0420\u0435\u0454\u0441\u0442\u0440\u0430\u0446\u0456\u044F
 menu.account.refill=\u041F\u043E\u043F\u043E\u0432\u043D\u0435\u043D\u043D\u044F \u0440\u0430\u0445\u0443\u043D\u043A\u0443
-menu.all.users=\u041A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0456
+menu.users=\u041A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0456
 menu.debtors=\u0411\u043E\u0440\u0436\u043D\u0438\u043A\u0438
 menu.invoices=\u0420\u0430\u0445\u0443\u043D\u043A\u0438
 menu.new.users=\u041D\u043E\u0432\u0456 \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0456
 menu.profile=\u041F\u0440\u043E\u0444\u0456\u043B\u044C
 menu.services=\u041F\u043E\u0441\u043B\u0443\u0433\u0438
 registration=\u0420\u0435\u0454\u0441\u0442\u0440\u0430\u0446\u0456\u044F
+registration.congratulation=\u0412\u0456\u0442\u0430\u0454\u043C\u043E!
+registration.congratulation.sentence1=\u0412\u0438 \u0443\u0441\u043F\u0456\u0448\u043D\u043E \u0437\u0430\u0440\u0435\u0454\u0441\u0442\u0440\u0443\u0432\u0430\u043B\u0438\u0441\u044C \u043D\u0430 \u0446\u044C\u043E\u043C\u0443 \u0432\u0435\u0431 \u0441\u0430\u0439\u0442\u0456.
+registration.congratulation.sentence2=\u0412\u0438 \u0437\u043C\u043E\u0436\u0435\u0442\u0435 \u0443\u0432\u0456\u0439\u0442\u0438 \u0443 \u0432\u0430\u0448 \u043F\u0440\u043E\u0444\u0456\u043B\u044C \u043F\u0456\u0441\u043B\u044F \u043F\u0435\u0440\u0435\u0432\u0456\u0440\u043A\u0438 \u0432\u0430\u0448\u0438\u0445 \u0434\u0430\u043D\u0438\u0445.
 registration.confirm.password=\u041F\u0456\u0434\u0442\u0432\u0435\u0440\u0434\u0438\u0442\u0438 \u043F\u0430\u0440\u043E\u043B\u044C
 registration.login=\u041B\u043E\u0433\u0456\u043D
 registration.middle.name=\u041F\u043E \u0431\u0430\u0442\u044C\u043A\u043E\u0432\u0456
@@ -53,6 +50,32 @@ registration.password=\u041F\u0430\u0440\u043E\u043B\u044C
 registration.phone.number=\u041D\u043E\u043C\u0435\u0440 \u0442\u0435\u043B\u0435\u0444\u043E\u043D\u0443
 registration.send=\u0412\u0456\u0434\u043F\u0440\u0430\u0432\u0438\u0442\u0438
 registration.surname=\u041F\u0440\u0456\u0437\u0432\u0438\u0449\u0435
-
+user.account.refill=\u041F\u043E\u043F\u043E\u0432\u043D\u0435\u043D\u043D\u044F \u0440\u0430\u0445\u0443\u043D\u043A\u0443
+user.account.refill.confirm=\u041F\u0456\u0434\u0442\u0432\u0435\u0440\u0434\u0438\u0442\u0438
+user.account.refill.credit.card=\u041A\u0440\u0435\u0434\u0438\u0442\u043D\u0430 \u043A\u0430\u0440\u0442\u043A\u0430
+user.account.refill.cvv=CVV
+user.account.refill.sum=\u0421\u0443\u043C\u0430
+user.invoices=\u0420\u0430\u0445\u0443\u043D\u043A\u0438
+user.profile=\u0412\u0430\u0448 \u043F\u0440\u043E\u0444\u0456\u043B\u044C
+user.profile.balance=\u0411\u0430\u043B\u0430\u043D\u0441
+user.profile.login=\u041B\u043E\u0433\u0456\u043D
+user.profile.middle.name=\u041F\u043E \u0431\u0430\u0442\u044C\u043A\u043E\u0432\u0456
+user.profile.name=\u0406\u043C'\u044F
+user.profile.password=\u041F\u0430\u0440\u043E\u043B\u044C
+user.profile.phone.number=\u041D\u043E\u043C\u0435\u0440 \u0442\u0435\u043B\u0435\u0444\u043E\u043D\u0443
+user.profile.surname=\u041F\u0440\u0456\u0437\u0432\u0438\u0449\u0435
+user.services=\u041F\u043E\u0441\u043B\u0443\u0433\u0438
+user.table.active=\u0430\u043A\u0442\u0438\u0432\u043E\u0432\u0430\u043D\u043E
+user.table.change.status=\u0417\u043C\u0456\u043D\u0438\u0442\u0438 \u0441\u0442\u0430\u0442\u0443\u0441
+user.table.date=\u0414\u0430\u0442\u0430
+user.table.description=\u041E\u043F\u0438\u0441
+user.table.inactive=\u043D\u0435 \u0430\u043A\u0442\u0438\u0432\u043E\u0432\u0430\u043D\u043E
+user.table.name=\u0406\u043C'\u044F
+user.table.pay=\u041E\u043F\u043B\u0442\u0438\u0442\u0438
+user.table.pay.invoice=\u043E\u043F\u043B\u0430\u0442\u0438\u0442\u0438
+user.table.price=\u0426\u0456\u043D\u0430
+user.table.status=\u0421\u0442\u0430\u0442\u0443\u0441
+user.table.switch.off=\u0432\u0456\u0434\u043A\u043B\u044E\u0447\u0438\u0442\u0438
+user.table.switch.on=\u043F\u0456\u0434\u043A\u043B\u044E\u0447\u0438\u0442\u0438
 
 
