Custom tags are added.

--- a/src/main/resources/locale_en_GB.properties
+++ b/src/main/resources/locale_en_GB.properties
@@ -5,20 +5,22 @@ admin.new.users=New users
 admin.table.active=active
 admin.table.add=Add
 admin.table.add.user=add
-admin.table.balance=Balance
-admin.table.block=block
+admin.table.balance=Balance (&#8372)
+admin.table.block=Block
 admin.table.blocked=blocked
-admin.table.change.status=Change status
 admin.table.date=Date
+admin.table.debt=Debt
+admin.table.delete=Delete
+admin.table.delete.user=delete
 admin.table.description=Description
 admin.table.middle_name=Middle name
 admin.table.name=Name
 admin.table.phone.number=Phone number
-admin.table.price=Price
+admin.table.price=Price (&#8372)
 admin.table.show=show
 admin.table.status=Status
 admin.table.surname=Surname
-admin.table.unblock=unblock
+admin.table.unblock=Unblock
 admin.table.invoices=Invoices
 admin.table.user=User
 admin.users=Users
@@ -54,8 +56,9 @@ user.account.refill=Account refill
 user.account.refill.confirm=Confirm
 user.account.refill.credit.card=Credit card
 user.account.refill.cvv=CVV
-user.account.refill.sum=Sum
+user.account.refill.sum=Sum (&#8372)
 user.invoices=Invoices
+user.not.enough.money=There is not enough money on your account.
 user.profile=Your profile
 user.profile.balance=Balance
 user.profile.login=Login
@@ -73,7 +76,7 @@ user.table.inactive=inactive
 user.table.name=Name
 user.table.pay=Pay
 user.table.pay.invoice=pay
-user.table.price=Price
+user.table.price=Price (&#8372)
 user.table.status=Status
 user.table.switch.off=switch off
 user.table.switch.on=switch on
