--- a/src/main/resources/locale_uk_UA.properties
+++ b/src/main/resources/locale_uk_UA.properties
@@ -5,20 +5,22 @@ admin.new.users=\u041D\u043E\u0432\u0456 \u043A\u043E\u0440\u0438\u0441\u0442\u0
 admin.table.active=\u0430\u043A\u0442\u0438\u0432\u043D\u0438\u0439
 admin.table.add=\u0414\u043E\u0434\u0430\u0442\u0438
 admin.table.add.user=\u0434\u043E\u0434\u0430\u0442\u0438
-admin.table.balance=\u0411\u0430\u043B\u0430\u043D\u0441
-admin.table.block=\u0437\u0430\u0431\u043B\u043E\u043A\u0443\u0432\u0430\u0442\u0438
+admin.table.balance=\u0411\u0430\u043B\u0430\u043D\u0441 (&#8372)
+admin.table.block=\u0417\u0430\u0431\u043B\u043E\u043A\u0443\u0432\u0430\u0442\u0438
 admin.table.blocked=\u0437\u0430\u0431\u043B\u043E\u043A\u043E\u0432\u0430\u043D\u0438\u0439
-admin.table.change.status=\u0417\u043C\u0456\u043D\u0438\u0442\u0438 \u0441\u0442\u0430\u0442\u0443\u0441
 admin.table.date=\u0414\u0430\u0442\u0430
+admin.table.debt=\u0411\u043E\u0440\u0433
+admin.table.delete=\u0412\u0438\u0434\u0430\u043B\u0438\u0442\u0438
+admin.table.delete.user=\u0432\u0438\u0434\u0430\u043B\u0438\u0442\u0438
 admin.table.description=\u041E\u043F\u0438\u0441
 admin.table.middle_name=\u041F\u043E \u0431\u0430\u0442\u044C\u043A\u043E\u0432\u0456
 admin.table.name=\u0406\u043C'\u044F
 admin.table.phone.number=\u041D\u043E\u043C\u0435\u0440 \u0442\u0435\u043B\u0435\u0444\u043E\u043D\u0443
-admin.table.price=\u0426\u0456\u043D\u0430
+admin.table.price=\u0426\u0456\u043D\u0430 (&#8372)
 admin.table.show=\u043F\u043E\u043A\u0430\u0437\u0430\u0442\u0438
 admin.table.status=\u0421\u0442\u0430\u0442\u0443\u0441
 admin.table.surname=\u041F\u0440\u0456\u0437\u0432\u0438\u0449\u0435
-admin.table.unblock=\u0440\u043E\u0437\u0431\u043B\u043E\u043A\u0443\u0432\u0430\u0442\u0438
+admin.table.unblock=\u0420\u043E\u0437\u0431\u043B\u043E\u043A\u0443\u0432\u0430\u0442\u0438
 admin.table.invoices=\u0420\u0430\u0445\u0443\u043D\u043A\u0438
 admin.table.user=\u041A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447
 admin.users=\u041A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0456
@@ -54,8 +56,9 @@ user.account.refill=\u041F\u043E\u043F\u043E\u0432\u043D\u0435\u043D\u043D\u044F
 user.account.refill.confirm=\u041F\u0456\u0434\u0442\u0432\u0435\u0440\u0434\u0438\u0442\u0438
 user.account.refill.credit.card=\u041A\u0440\u0435\u0434\u0438\u0442\u043D\u0430 \u043A\u0430\u0440\u0442\u043A\u0430
 user.account.refill.cvv=CVV
-user.account.refill.sum=\u0421\u0443\u043C\u0430
+user.account.refill.sum=\u0421\u0443\u043C\u0430 (&#8372)
 user.invoices=\u0420\u0430\u0445\u0443\u043D\u043A\u0438
+user.not.enough.money=\u041D\u0430 \u0432\u0430\u0448\u043E\u043C\u0443 \u0440\u0430\u0445\u0443\u043D\u043A\u0443 \u043D\u0435\u0434\u043E\u0441\u0442\u0430\u0442\u043D\u044C\u043E \u0433\u0440\u043E\u0448\u0435\u0439.
 user.profile=\u0412\u0430\u0448 \u043F\u0440\u043E\u0444\u0456\u043B\u044C
 user.profile.balance=\u0411\u0430\u043B\u0430\u043D\u0441
 user.profile.login=\u041B\u043E\u0433\u0456\u043D
@@ -71,9 +74,9 @@ user.table.date=\u0414\u0430\u0442\u0430
 user.table.description=\u041E\u043F\u0438\u0441
 user.table.inactive=\u043D\u0435 \u0430\u043A\u0442\u0438\u0432\u043E\u0432\u0430\u043D\u043E
 user.table.name=\u0406\u043C'\u044F
-user.table.pay=\u041E\u043F\u043B\u0442\u0438\u0442\u0438
+user.table.pay=\u041E\u043F\u043B\u0430\u0442\u0438\u0442\u0438
 user.table.pay.invoice=\u043E\u043F\u043B\u0430\u0442\u0438\u0442\u0438
-user.table.price=\u0426\u0456\u043D\u0430
+user.table.price=\u0426\u0456\u043D\u0430 (&#8372)
 user.table.status=\u0421\u0442\u0430\u0442\u0443\u0441
 user.table.switch.off=\u0432\u0456\u0434\u043A\u043B\u044E\u0447\u0438\u0442\u0438
 user.table.switch.on=\u043F\u0456\u0434\u043A\u043B\u044E\u0447\u0438\u0442\u0438
