Builder pattern is added.

--- a/src/main/resources/locale_en_GB.properties
+++ b/src/main/resources/locale_en_GB.properties
@@ -29,10 +29,10 @@ footer.copyright=&copy; V.V. Myroniuk, 2017
 header.logout=Logout
 header.phone.station=PHONE STATION
 login.authentication=Authentication
-login.enter=Enter
 login.login=Login
 login.password=Password
-login.registration=Registration
+login.sign.in=Sign in
+login.sign.up=Sign up
 menu.account.refill=Account refill
 menu.users=Users
 menu.debtors=Debtors
@@ -50,7 +50,7 @@ registration.middle.name=Middle name
 registration.name=Name
 registration.password=Password
 registration.phone.number=Phone number
-registration.send=Send
+registration.sign.up=Sign up
 registration.surname=Surname
 user.account.refill=Account refill
 user.account.refill.confirm=Confirm
