Localization bugs are fixed.

--- a/src/main/resources/locale_en_GB.properties
+++ b/src/main/resources/locale_en_GB.properties
@@ -25,6 +25,7 @@ admin.table.invoices=Invoices
 admin.table.user=User
 admin.users=Users
 error=Error has occurred!
+error.404=Error 404. Page not found!
 footer.copyright=&copy; V.V. Myroniuk, 2017
 header.logout=Logout
 header.phone.station=PHONE STATION
@@ -60,12 +61,15 @@ user.account.refill.sum=Sum (&#8372)
 user.invoices=Invoices
 user.not.enough.money=There is not enough money on your account.
 user.profile=Your profile
+user.profile.active=active
+user.profile.blocked=blocked
 user.profile.balance=Balance
 user.profile.login=Login
 user.profile.middle.name=Middle name
 user.profile.name=Name
 user.profile.password=Password
 user.profile.phone.number=Phone number
+user.profile.status=Status
 user.profile.surname=Surname
 user.services=Services
 user.table.active=active
